aligned ratings, fixed review header, adjusted grid gap

--- a/styles.css
+++ b/styles.css
@@ -20,20 +20,20 @@ body {
   flex-direction: column;
   place-items: center;
   font-size: 15px;
-  line-height: 1.3rem;
+  line-height: 1rem;
 }
 .container {
-  width: 1020px;
-  height: 545px;
+  width: 80vw;
+  height: 80vh;
   display: grid;
   grid-template: 60% 40% / 1fr 0.5fr 0.5fr 1fr;
   grid-template-areas:
     'header header ratings ratings'
     'review-1 review-2 review-2 review-3';
-  gap: 1rem 1rem;
-  margin-bottom: 8rem;
+  gap: 0rem 1.5rem;
+  margin: 10rem;
 }
-
+/* ---------------------------- */
 /* Background Pattern */
 .bg-mobile-top,
 .bg-mobile-bottom {
@@ -45,7 +45,7 @@ body {
   z-index: -1;
 }
 .bg-desktop-top {
-  transform: translateY(10%);
+  transform: translateX(-155%);
 }
 .bg-desktop-bottom {
   width: 100vw;
@@ -63,7 +63,7 @@ body {
     z-index: -1;
   }
 }
-
+/* ---------------------------- */
 /* Header */
 header {
   grid-area: header;
@@ -71,33 +71,38 @@ header {
 }
 header h1 {
   color: var(--primaryMagenta);
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   font-weight: 700;
-  line-height: 3rem;
+  line-height: 2.5rem;
   margin-bottom: 1rem;
   letter-spacing: -2px;
   padding-right: 5rem;
 }
 header p {
-  line-height: 1.5rem;
+  line-height: 1.4rem;
   padding-right: 5rem;
   font-weight: 400;
   letter-spacing: -0.8px;
 }
+/* ---------------------------- */
 /* Ratings */
 .ratings {
+  display: flex;
+  flex-direction: column;
   grid-area: ratings;
   align-self: center;
 }
 .rating {
   display: flex;
+  align-self: flex-end;
+  width: 24rem;
   background-color: var(--neutralLightMagenta);
   margin-bottom: 1rem;
   border-radius: 9px;
   padding: 1rem;
 }
 .rating:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 0.7rem;
 }
 .rating-stars {
   /* display: flex; */
@@ -106,12 +111,13 @@ header p {
 .rating-stars img {
   margin-right: 3px;
 }
+.rating-1 {
+  transform: translateX(-6rem);
+}
 .rating-2 {
-  transform: translateX(3rem);
+  transform: translateX(-3rem);
 }
-.rating-3 {
-  transform: translateX(6rem);
-}
+/* ---------------------------- */
 /* Reviews */
 .review-1,
 .review-2,
@@ -119,7 +125,7 @@ header p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1.8rem;
+  padding: 0 1.8rem 0 1.8rem;
   background-color: var(--primaryMagenta);
   border-radius: 7px;
 }
@@ -136,16 +142,17 @@ header p {
 }
 .review-header {
   display: flex;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
+  transform: translateX(-1.4rem);
 }
 .review-header img {
   border-radius: 50%;
-  margin-right: 1.5rem;
-  transform: scale(0.45);
+  transform: translateY(0rem) scale(0.45);
 }
 .review-name {
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 .name {
   color: var(--neutralWhite);
@@ -156,6 +163,6 @@ header p {
   font-weight: 400;
 }
 .review-quote {
-  font-size: 12px;
+  font-size: 10px;
   color: var(--neutralWhite);
 }
